# logica-core

./: .env.dev  .pre-commit-config.yaml  Cargo.toml  README.md
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  initialize.sh  post_start.sh
.github/workflows/: ci.yml  security.yml
migrations/data/: 1759345771876_init.sql  1759345877502_create_migrations_table.sql  1759346010390_create_aggregations_schema.sql
migrations/master/: 1759345718864_init.sql
src/: lib.rs
src/adapters/: mod.rs
src/domain/models/: item.rs
src/infrastructure/: mod.rs
src/infrastructure/migrators/: mod.rs  refinery.rs
